--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "spotify-clone",
     "slug": "spotify-clone",
     "scheme": "spotify-clone",
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -20,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.spotifyclone"
     },
     "web": {
       "favicon": "./assets/favicon.png",
