--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "base-64": "^1.0.0",
     "expo": "~52.0.33",
     "expo-auth-session": "^6.0.3",
+    "expo-av": "~15.0.2",
     "expo-constants": "~17.0.5",
     "expo-crypto": "~14.0.2",
     "expo-linear-gradient": "~14.0.2",
@@ -29,9 +30,11 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-modals": "^0.22.3",
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-webview": "^13.13.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
