--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-modals": "^0.22.3",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "3.16.2",
