--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-crypto": "~14.0.2",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-localization": "^16.0.1",
     "expo-random": "^14.0.1",
     "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
