--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
     "base-64": "^1.0.0",
     "expo": "~52.0.33",
@@ -38,6 +39,9 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-webview": "^13.13.2",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
