--- a/app.json
+++ b/app.json
@@ -29,6 +29,14 @@
       "favicon": "./assets/favicon.png",
       "bundler": "metro"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      [
+        "expo-router",
+        {
+          "root": "./app",
+          "asyncRoutes": true
+        }
+      ]
+    ]
   }
 }
