--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "spotify-clone",
-    "slug": "spotify-clone",
-    "scheme": "spotify-clone",
+    "name": "myspotifyapp",
+    "slug": "myspotifyapp",
+    "scheme": "myspotifyapp",
     "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
