--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-share": "^12.0.9",
     "react-native-webview": "^13.13.2",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
