--- a/app.json
+++ b/app.json
@@ -3,7 +3,10 @@
     "name": "myspotifyapp",
     "slug": "myspotifyapp",
     "scheme": "myspotifyapp",
-    "platforms": ["ios", "android"],
+    "platforms": [
+      "ios",
+      "android"
+    ],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -15,7 +18,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.myspotifyapp"
     },
     "android": {
       "adaptiveIcon": {
@@ -23,7 +27,7 @@
         "backgroundColor": "#ffffff"
       },
       "usesCleartextTraffic": true,
-      "package": "com.anonymous.spotifyclone"
+      "package": "com.anonymous.myspotifyapp"
     },
     "web": {
       "favicon": "./assets/favicon.png",
@@ -37,6 +41,16 @@
           "asyncRoutes": true
         }
       ]
-    ]
+    ],
+    "extra": {
+      "router": {
+        "origin": false,
+        "root": "./app",
+        "asyncRoutes": true
+      },
+      "eas": {
+        "projectId": "b93814db-6fd4-4d6c-97f6-87b84076218d"
+      }
+    }
   }
 }
