Able to redirect to the page

--- a/app.json
+++ b/app.json
@@ -3,10 +3,7 @@
     "name": "myspotifyapp",
     "slug": "myspotifyapp",
     "scheme": "myspotifyapp",
-    "platforms": [
-      "ios",
-      "android"
-    ],
+    "platforms": ["ios", "android"],
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,7 +24,20 @@
         "backgroundColor": "#ffffff"
       },
       "usesCleartextTraffic": true,
-      "package": "com.anonymous.myspotifyapp"
+      "package": "com.anonymous.myspotifyapp",
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "data": [
+            {
+              "scheme": "https",
+              "host": "mini-page-builder-smoky.vercel.app",
+              "pathPrefix": "/app"
+            }
+          ],
+          "category": ["BROWSABLE", "DEFAULT"]
+        }
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png",
