--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,14 +29,13 @@
         <data android:scheme="myspotifyapp"/>
         <data android:scheme="com.anonymous.myspotifyapp"/>
       </intent-filter>
-        <intent-filter>
-        <action android:name="android.intent.action.VIEW" />
-        <category android:name="android.intent.category.DEFAULT" />
-        <category android:name="android.intent.category.BROWSABLE" />
-        <data android:scheme="http" />
-        <data android:scheme="https" />
-        <data android:host="mini-page-builder-smoky.vercel.app" />
-    </intent-filter>
+        <intent-filter android:autoVerify="true">
+          <action android:name="android.intent.action.VIEW" />
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+            <data android:scheme="https" />
+            <data android:host="mini-page-builder-smoky.vercel.app" />
+  </intent-filter>
     </activity>
   </application>
 </manifest>
