--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
           <category android:name="android.intent.category.DEFAULT" />
           <category android:name="android.intent.category.BROWSABLE" />
             <data android:scheme="https" />
-            <data android:host="mini-page-builder-smoky.vercel.app" />
+            <data android:host="spotify-server-six.vercel.app" />
   </intent-filter>
     </activity>
   </application>
